fixed styling and overflow for phone

--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ body {
 }
 
 .s1 p {
-    padding: 40px 10px 40px 40px;   
+    padding: 10px 10px 40px 40px;   
 }
 
 .s2 {
